test/static/wrong/shadow1.kk.out
test/static/wrong/shadow1.kk(1,16): error: Type a is already defined