test/static/wrong/shadow1.kk
alias shadow<a,a> = a
